
[workspace]
resolver = "2"
members = [
    "user_management",
    "financial_transactions",
    "credit_scoring",
    "lending",
    "card_integration",
    "point_of_sale",
    "mobile_money",
    "crm",
    "ai_assistant",
    "fraud_detection",
    "notification",
    "reporting_analytics",
    "api_gateway",
    "database_service",
    "authentication_authorization",
    "load_balancing",
    "cache_management",
    "logging_monitoring",
    "data_synchronization",
    "backup_recovery",
    "message_queuing",
    "configuration_management",
    "security",
    "service_discovery",
    "microservices_deployment"
]

[profile.release]
opt-level = 3
